# CS302N_Computer_Graphics_Project

./: .gitignore  CMakeLists.txt  CODE_DETAILS.md  README.md  main.cpp  tree.txt
assets/shaders/: fragment.glsl  vertex.glsl
include/: camera.h  character.h  character_base.h  character_cat.h  character_chicken.h  character_dino.h  character_dog.h  character_frog.h  chicken.h  coin.h  collision.h  game.h  lane.h  obstacle.h  pregame.h  renderer.h  save_data.h  shader.h  types.h
include/glad/: glad.h
src/: camera.cpp  character.cpp  character_base.cpp  character_cat.cpp  character_chicken.cpp  character_dino.cpp  character_dog.cpp  character_frog.cpp  chicken.cpp  coin.cpp  collision.cpp  game.cpp  glad.c  lane.cpp  obstacle.cpp  pregame.cpp  renderer.cpp  save_data.cpp  shader.cpp
